--- a/app/src/main/res/layout/activity_shampoo.xml
+++ b/app/src/main/res/layout/activity_shampoo.xml
@@ -37,7 +37,7 @@
     <!-- 마이너스 버튼 -->
 
     <ImageButton
-        android:id="@+id/iv_minus_btn"
+        android:id="@+id/iv_shampoo_minus_btn"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginEnd="50dp"
@@ -61,8 +61,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_shampoo" />
 
+    <TextView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="110dp"
+        android:layout_marginLeft="50dp"
+        android:text="분"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_shampoo" />
+
     <ImageButton
-        android:id="@+id/iv_plus_btn"
+        android:id="@+id/iv_shampoo_plus_btn"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="50dp"
@@ -77,8 +89,9 @@
     <ImageButton
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:id="@+id/iv_initial_shampoo_check_off"
         android:src="@drawable/initial_check_off"
-        app:layout_constraintTop_toBottomOf="@id/iv_minus_btn"
+        app:layout_constraintTop_toBottomOf="@id/iv_shampoo_minus_btn"
         android:layout_marginTop="40dp"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="120dp"
@@ -89,8 +102,9 @@
     <ImageButton
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:id="@+id/iv_initial_shampoo_check_on"
         android:src="@drawable/initial_check_on"
-        app:layout_constraintTop_toBottomOf="@id/iv_minus_btn"
+        app:layout_constraintTop_toBottomOf="@id/iv_shampoo_minus_btn"
         android:layout_marginTop="40dp"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="120dp"
@@ -103,7 +117,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="샤워할 때 안 해요"
-        app:layout_constraintTop_toBottomOf="@+id/iv_minus_btn"
+        app:layout_constraintTop_toBottomOf="@+id/iv_shampoo_minus_btn"
         android:layout_marginTop="45dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -112,6 +126,7 @@
     <ImageButton
         android:layout_width="match_parent"
         android:layout_height="60dp"
+        android:id="@+id/ib_shampoo_next"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:src="@drawable/initial_next"/>
