--- a/app/src/main/res/layout/activity_shower.xml
+++ b/app/src/main/res/layout/activity_shower.xml
@@ -37,7 +37,7 @@
 
     <!-- 마이너스 버튼 -->
     <ImageButton
-        android:id="@+id/iv_minus_btn"
+        android:id="@+id/iv_shower_minus_btn"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginEnd="50dp"
@@ -61,8 +61,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_shower" />
 
+    <TextView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="110dp"
+        android:layout_marginLeft="50dp"
+        android:text="분"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_shower" />
+
     <ImageButton
-        android:id="@+id/iv_plus_btn"
+        android:id="@+id/iv_shower_plus_btn"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="50dp"
@@ -77,6 +89,7 @@
     <ImageButton
         android:layout_width="match_parent"
         android:layout_height="60dp"
+        android:id="@+id/ib_shower_next"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:src="@drawable/initial_next"/>
