--- a/app/src/main/res/layout/activity_shower.xml
+++ b/app/src/main/res/layout/activity_shower.xml
@@ -15,13 +15,15 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:layout_marginBottom="100dp"
-        android:text="당신의 샤워 시간은 어떻게 되나요?"
+        android:text="샤워를 얼마나 하시나요? (1/5)"
+        android:fontFamily="@font/applesdgothicneob"
         android:textStyle="bold"
-        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:textSize="25sp"
         app:layout_constraintBottom_toTopOf="@+id/iv_shower"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginLeft="30dp"/>
 
     <!-- 샤워 이미지 -->
 
@@ -86,22 +88,36 @@
         android:background="@android:color/transparent"
         android:scaleType="fitCenter"/>
 
-    <ImageButton
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:id="@+id/ib_shower_next"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_height="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:src="@drawable/initial_next"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="30dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="다음"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        <!-- 이미지 버튼 -->
+        <ImageButton
+            android:id="@+id/ib_shower_next"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/start_start_btn"
+            android:adjustViewBounds="true"
+            android:background="@android:color/transparent"
+            android:scaleType="fitCenter"/>
+
+        <!-- 이미지 버튼 위에 겹칠 텍스트 -->
+        <TextView
+            android:id="@+id/tv_button_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="다음"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:textAlignment="center"
+            android:fontFamily="@font/applesdgothicneob"
+            android:layout_gravity="center"/>
+
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
