--- a/app/src/main/res/layout/activity_shower.xml
+++ b/app/src/main/res/layout/activity_shower.xml
@@ -29,8 +29,8 @@
 
     <ImageView
         android:id="@+id/iv_shower"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_marginBottom="68dp"
         android:src="@drawable/initial_shower"
         app:layout_constraintBottom_toTopOf="@+id/tv_shower_time"
@@ -40,13 +40,13 @@
     <!-- 마이너스 버튼 -->
     <ImageButton
         android:id="@+id/iv_shower_minus_btn"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:layout_marginEnd="50dp"
         android:src="@drawable/initial_minus_btn"
         app:layout_constraintTop_toBottomOf="@+id/iv_shower"
         app:layout_constraintEnd_toStartOf="@+id/tv_shower_time"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="110dp"
         android:adjustViewBounds="true"
         android:background="@android:color/transparent"
         android:scaleType="fitCenter"/>
@@ -59,6 +59,7 @@
         android:text="15"
         android:textAlignment="center"
         android:textSize="30sp"
+        android:fontFamily="@font/applesdgothicneob"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_shower" />
@@ -71,16 +72,17 @@
         android:text="분"
         android:textAlignment="center"
         android:textSize="20sp"
+        android:fontFamily="@font/applesdgothicneob"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_shower" />
 
     <ImageButton
         android:id="@+id/iv_shower_plus_btn"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="110dp"
         android:src="@drawable/initial_plus_btn"
         app:layout_constraintStart_toEndOf="@+id/tv_shower_time"
         app:layout_constraintTop_toBottomOf="@+id/iv_shower"
@@ -90,34 +92,32 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="30dp">
+        app:layout_constraintStart_toStartOf="parent">
 
         <!-- 이미지 버튼 -->
         <ImageButton
             android:id="@+id/ib_shower_next"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/start_start_btn"
             android:adjustViewBounds="true"
             android:background="@android:color/transparent"
-            android:scaleType="fitCenter"/>
+            android:src="@drawable/start_start_btn" />
 
         <!-- 이미지 버튼 위에 겹칠 텍스트 -->
         <TextView
             android:id="@+id/tv_button_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="다음"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            android:textAlignment="center"
+            android:layout_gravity="center"
             android:fontFamily="@font/applesdgothicneob"
-            android:layout_gravity="center"/>
-
+            android:text="다음"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="20sp" />
     </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
