[initial] 뒤로가기 버튼 추가

--- a/app/src/main/res/layout/activity_cleansing.xml
+++ b/app/src/main/res/layout/activity_cleansing.xml
@@ -8,6 +8,19 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <ImageButton
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:id="@+id/ib_cleansing_back"
+        android:src="@drawable/initial_back"
+        android:adjustViewBounds="true"
+        android:background="@android:color/transparent"
+        android:scaleType="fitCenter"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"/>
+
     <!-- 질문 텍스트 -->
     <TextView
         android:id="@+id/tv_cleanser_question"
