--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -71,16 +71,17 @@
         android:layout_marginLeft="30dp"/>
 
     <ImageButton
+        android:id="@+id/startBtn"
         android:layout_width="80dp"
         android:layout_height="80dp"
+        android:layout_marginTop="70dp"
         android:adjustViewBounds="true"
         android:background="@android:color/transparent"
         android:scaleType="fitCenter"
         android:src="@drawable/start_btn_start"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_start_box"
-        android:layout_marginTop="70dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/iv_start_box" />
 
     <ImageView
         android:layout_width="180dp"
