--- a/app/src/main/res/layout/fragment_digital_timer_widget.xml
+++ b/app/src/main/res/layout/fragment_digital_timer_widget.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/test"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".DigitalTimerWidget">
+    tools:context=".DigitalClockWidget">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
@@ -13,10 +14,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:layout_gravity="center"
         android:text="test"
         android:textColor="@android:color/white"
-        android:layout_gravity="center"
-        android:textSize="150sp"
+        android:textSize="100sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
