--- a/app/src/main/res/layout/activity_widget.xml
+++ b/app/src/main/res/layout/activity_widget.xml
@@ -9,27 +9,34 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/viewPager"
 
             android:layout_width="match_parent"
-            android:layout_height="250dp">
+            android:layout_height="match_parent"
+            android:layout_weight="1">
 
         </androidx.viewpager2.widget.ViewPager2>
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/viewPager2"
             android:layout_width="match_parent"
-            android:layout_height="250dp">
+            android:layout_height="match_parent"
+            android:layout_weight="1">
 
         </androidx.viewpager2.widget.ViewPager2>
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/viewPager3"
             android:layout_width="match_parent"
-            android:layout_height="230dp">
+            android:layout_height="match_parent"
+            android:layout_weight="1">
 
         </androidx.viewpager2.widget.ViewPager2>
 
