--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:src="@drawable/start_bubble"/>
+        android:src="@drawable/start_bubble"
+        android:layout_marginBottom="100dp"/>
 
     <!-- 메인 텍스트 -->
     <TextView
@@ -28,7 +29,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_bubble"
-        android:layout_marginTop="30dp"/>
+        android:layout_marginTop="20dp"/>
 
     <!-- 버튼과 텍스트 겹치기 위한 FrameLayout -->
     <FrameLayout
